objects/T0500__c/T0500__c.object-meta.xml
<CustomObject>
    <label>T0500_1</label>
    <nameField>
        <label>T0500 Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>T0500_1</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>