objects/T0500__c/fields/field000__c.field-meta.xml
<CustomField>
    <fullName>field000__c</fullName>
    <label>field000</label>
    <length>10</length>
    <type>Text</type>
</CustomField>