objects/T0500__c/fields/field001__c.field-meta.xml
<CustomField>
    <fullName>field001__c</fullName>
    <label>field001</label>
    <length>10</length>
    <type>Text</type>
</CustomField>