objects/T0500__c/fields/field002__c.field-meta.xml
<CustomField>
    <fullName>field002__c</fullName>
    <label>field002</label>
    <length>10</length>
    <type>Text</type>
</CustomField>