objects/T0500__c/fields/Primary_Bank_Name__c.field-meta.xml
<CustomField>
    <fullName>Primary_Bank_Name__c</fullName>
    <description>Primary Banking Services Provider</description>
    <label>Primary Bank List</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1st Essex</fullName>
            </value>
            <value>
                <fullName>5th 3rd Bank</fullName>
            </value>
            <value>
                <fullName>Adams Co-Operative Bank</fullName>
            </value>
            <value>
                <fullName>Adirondack Bank</fullName>
            </value>
            <value>
                <fullName>Adirondack Trust</fullName>
            </value>
            <value>
                <fullName>Allegiance Bank</fullName>
            </value>
            <value>
                <fullName>Allied Trust</fullName>
            </value>
            <value>
                <fullName>Androscoggin Savings Bank</fullName>
            </value>
            <value>
                <fullName>AT&amp;T Capital</fullName>
            </value>
            <value>
                <fullName>Ballston Spa</fullName>
            </value>
            <value>
                <fullName>Ballston Spa National Bank</fullName>
            </value>
            <value>
                <fullName>Bangor Savings Bank</fullName>
            </value>
            <value>
                <fullName>BankAtlantic</fullName>
            </value>
            <value>
                <fullName>Bank Five</fullName>
            </value>
            <value>
                <fullName>Bank of America</fullName>
            </value>
            <value>
                <fullName>Bank of Bennington</fullName>
            </value>
            <value>
                <fullName>Bank of Cape Cod</fullName>
            </value>
            <value>
                <fullName>Bank of Fall River</fullName>
            </value>
            <value>
                <fullName>Bank of Greene County</fullName>
            </value>
            <value>
                <fullName>Bank of New England</fullName>
            </value>
            <value>
                <fullName>Bank of New Hampshire</fullName>
            </value>
            <value>
                <fullName>Bank of New Jersey</fullName>
            </value>
            <value>
                <fullName>Bar Harbor Bank and Trust</fullName>
            </value>
            <value>
                <fullName>Beneficial</fullName>
            </value>
            <value>
                <fullName>Beneficial Savings Bank</fullName>
            </value>
            <value>
                <fullName>Berkshire Bank</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>