objects/T0500__c/fields/Test1__c.field-meta.xml
<CustomField>
    <fullName>Test1__c</fullName>
    <label>Test1</label>
    <type>AutoNumber</type>
</CustomField>